[package]
name = "hang"
version = "0.1.0"
authors = ["Martin Huter <martin.huter@viesure.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt  = "0.3.13"
crossterm = "0.20"
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
unicode-width = "0.1"
itertools = "0.10"
