[package]
name = "hadvent"
version = "0.2.1"
authors = ["Martin Huter <martin.huter@viesure.io>"]
license = "MIT"
description = "A game of hangman"
readme = "README.md"
homepage = "https://github.com/mgh87/h-advent"
repository = "https://github.com/mgh87/h-advent"
keywords = ["cli", "game", "demo"]
categories = ["command-line-utilities"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt  = "0.3.13"
crossterm = "0.20"
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
unicode-width = "0.1"
itertools = "0.10"
